tvarit-maven-plugin/src/main/cloudformation/base/network.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "TvaritVpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-vpc"
                ]
              ]
            }
          },
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":vpc"
                ]
              ]
            },
            "Value": ""
          }
        ]
      }
    },
    "AppSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.120.0/24",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Ref": "AvailabilityZones"
            }
          ]
        },
        "Tags": [
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":app"
                ]
              ]
            },
            "Value": ""
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-app-a"
                ]
              ]
            }
          }
        ]
      }
    },
    "AppSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.220.0/24",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Ref": "AvailabilityZones"
            }
          ]
        },
        "Tags": [
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":app"
                ]
              ]
            },
            "Value": ""
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-app-b"
                ]
              ]
            }
          }
        ]
      }
    },
    "DbSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.10.0/24",
        "AvailabilityZone": "us-east-1c",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-db-a"
                ]
              ]
            }
          },
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":db"
                ]
              ]
            },
            "Value": ""
          }
        ]
      }
    },
    "DbSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.20.0/24",
        "AvailabilityZone": "us-east-1d",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":db"
                ]
              ]
            },
            "Value": ""
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-db-b"
                ]
              ]
            }
          }
        ]
      }
    },
    "PublicSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-pub-a"
                ]
              ]
            }
          },
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":appSubnet"
                ]
              ]
            },
            "Value": ""
          }
        ]
      }
    },
    "PublicSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "us-east-1e",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":appSubnet"
                ]
              ]
            },
            "Value": ""
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-pub-b"
                ]
              ]
            }
          }
        ]
      }
    },


    "AppSubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        },

        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-app-internet-rt"
                ]
              ]
            }
          }
        ]
      }
    },
    "DbSubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-db-internet-rt"
                ]
              ]
            }
          }
        ]
      }
    },
    "PubSubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-pub-internet-rt"
                ]
              ]
            }
          }
        ]
      }
    },


    "AppSubnetARouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "AppSubnetA"
        }
      }
    },
    "AppSubnetBRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "AppSubnetB"
        }
      }
    },
    "DbSubnetARouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DbSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "DbSubnetA"
        }
      }
    },
    "DbSubnetBRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "DbSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "DbSubnetB"
        }
      }
    },
    "PubSubnetARouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PubSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnetA"
        }
      }
    },
    "PubSubnetBRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PubSubnetRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnetB"
        }
      }
    },


    "AppSubnetAToNatGatewayRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "AppSubnetRouteTable"
        },
        "NatGatewayId": {
          "Ref": "NatGatewayA"
        }
      }
    },
    "PubSubnetAToNatGatewayRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PubSubnetRouteTable"
        },
        "GatewayId": {
          "Ref": "IgForVpc"
        }
      }
    },
    "DbSubnetBToNatRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "DbSubnetRouteTable"
        },
        "NatGatewayId": {
          "Ref": "NatGatewayA"
        }
      }
    },


    "DbSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "A subnet group for high availability app database.",
        "SubnetIds": [
          {
            "Ref": "DbSubnetA"
          },
          {
            "Ref": "DbSubnetB"
          }
        ]
      }
    },
    "IgForVpc": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  "-ig"
                ]
              ]
            }
          }
        ]
      }
    },
    "TvaritVpcDhcpOpts": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "DefaultTvaritVpcNacl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        }
      }
    },
    "TvaritVpcDefaultRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        }
      }
    },
    "SgDefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "Tags": [
          {
            "Key": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "ProjectNameParm"
                  },
                  ":appSg"
                ]
              ]
            },
            "Value": ""
          }
        ]
      }
    },
    "NaclDefaultRule1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        }
      }
    },
    "NaclDefaultRule2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        }
      }
    },
    "DefaultNaclToAppSubnetBAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        },
        "SubnetId": {
          "Ref": "PublicSubnetB"
        }
      }
    },
    "DefaultNaclToDbSubnetBAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        },
        "SubnetId": {
          "Ref": "DbSubnetB"
        }
      }
    },
    "DefaultNaclToDbSubnetAAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        },
        "SubnetId": {
          "Ref": "DbSubnetA"
        }
      }
    },
    "DefaultNaclToAppSubnetAAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "DefaultTvaritVpcNacl"
        },
        "SubnetId": {
          "Ref": "PublicSubnetA"
        }
      }
    },
    "IgAttachedtoVpc": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "InternetGatewayId": {
          "Ref": "IgForVpc"
        }
      }
    },
    "IpForNatA": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "IpForNatB": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NatGatewayA": {
      "DependsOn": [
        "IgAttachedtoVpc"
      ],
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "AppSubnetA"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "IpForNatA",
            "AllocationId"
          ]
        }
      }
    },
    "NatGatewayB": {
      "DependsOn": [
        "IgAttachedtoVpc"
      ],
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "AppSubnetB"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "IpForNatB",
            "AllocationId"
          ]
        }
      }
    },
    "S3Endpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "AppSubnetRouteTable"
          },
          {
            "Ref": "DbSubnetRouteTable"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "TvaritVpc"
        }
      }
    },
    "dhcpAssociation": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "TvaritVpc"
        },
        "DhcpOptionsId": {
          "Ref": "TvaritVpcDhcpOpts"
        }
      }
    },
    "defaultSgInRule": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "SgDefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "SgDefault"
        },
        "SourceSecurityGroupOwnerId": {
          "Ref": "AWS::AccountId"
        }
      }
    },
    "defaultSgOutRule": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "SgDefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Parameters": {
    "AvailabilityZones": {
      "Type": "CommaDelimitedList",
      "Description": "Enter exactly 2 availability zone ids where the ELBs and app servers will be deployed. e.g. us-east-1a"
    },
    "ProjectNameParm": {
      "Type": "String",
      "Description": "Enter a name for your project. This will be used as part of resource names and tags.",
      "AllowedPattern": "[a-zA-Z][-a-zA-Z0-9]*",
      "MinLength": "1"
    }
  },
  "Outputs": {
    "TvaritVpcIdOutput": {
      "Description": "The vpc created for Tvarit",
      "Value": {
        "Ref": "TvaritVpc"
      }
    },
    "ElbSecurityGroupsOutput": {
      "Description": "The security groups subnets for apps",
      "Value": {
        "Ref": "SgDefault"
      }
    },
    "AppSecurityGroupsOutput": {
      "Description": "The security groups subnets for apps",
      "Value": {
        "Ref": "SgDefault"
      }
    },
    "DbSubnetGroupOutput": {
      "Description": "The subnet group for for database",
      "Value": {
        "Ref": "DbSubnetGroup"
      }
    },
    "ElbSubnetsOutput": {
      "Description": "The two subnets for elbs",
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "PublicSubnetA"
            },
            {
              "Ref": "PublicSubnetB"
            }
          ]
        ]
      }
    },
    "AvailabilityZonesOutput": {
      "Description": "The two availability zones for elbs",
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Fn::GetAtt": [
                "AppSubnetA",
                "AvailabilityZone"
              ]
            },
            {
              "Fn::GetAtt": [
                "AppSubnetB",
                "AvailabilityZone"
              ]
            }
          ]
        ]
      }
    },
    "DeployerLambdaFunctionSecurityGroupsOutput": {
      "Description": "The security group for lamdba function",
      "Value": {
        "Ref": "SgDefault"
      }
    },
    "DeployerLambdaFunctionSubnetIdsOutput": {
      "Description": "The subnet ids for lamdba function",
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "AppSubnetA"
            },
            {
              "Ref": "AppSubnetB"
            }
          ]
        ]
      }
    },
    "AppSubnetsOutput": {
      "Description": "Subnets where apps will be launched",
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "AppSubnetA"
            },
            {
              "Ref": "AppSubnetB"
            }
          ]
        ]
      }
    }
  },
  "Description": ""
}
